# Youtube-Content-Creator

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PRD.md  README.md  VALIDATION-SUMMARY.md  aathichudi-ep10-never-fail-learning-PART1-scenes-1-9.md  aathichudi-ep10-never-fail-learning-PART2-scenes-10-18.md  aathichudi-ep10-scenes-1-2-REVISED-for-OpenArt.md  aathichudi-ep10-scenes-10-18-REVISED-for-OpenArt.md  aathichudi-ep10-scenes-3-9-REVISED-for-OpenArt.md  aathichudi-ep10-validation-report.md  aathichudi-ep11-OPTIMIZED-clips-01-04.md  aathichudi-ep11-OPTIMIZED-clips-05-16.md  aathichudi-ep11-OPTIMIZED-clips-17-37.md  aathichudi-ep11-dont-speak-with-envy-PART1-scenes-1-9.md  aathichudi-ep11-dont-speak-with-envy-PART2-scenes-10-18.md  aathichudi-ep11-scenes-1-2-REVISED-for-OpenArt.md  aathichudi-ep11-scenes-10-18-REVISED-for-OpenArt.md  aathichudi-ep11-scenes-3-9-REVISED-for-OpenArt.md  aathichudi-ep12-OPTIMIZED-clips-01-05.md  aathichudi-ep12-OPTIMIZED-clips-06-19.md  aathichudi-ep12-OPTIMIZED-clips-20-41.md  aathichudi-ep12-dont-be-stingy-PART1-scenes-1-9.md  aathichudi-ep12-dont-be-stingy-PART2-scenes-10-18.md  aathichudi-ep12-scenes-1-2-REVISED-for-OpenArt.md  aathichudi-ep12-scenes-10-18-REVISED-for-OpenArt.md  aathichudi-ep12-scenes-3-9-REVISED-for-OpenArt.md  aathichudi-ep5-never-give-up-complete.md  aathichudi-ep6-numbers-letters-complete.md  aathichudi-ep7-accept-alms-shameful-complete.md  aathichudi-ep7-validation-report.md  aathichudi-ep8-sharing-food-complete.md  aathichudi-ep8-validation-report.md  aathichudi-ep9-dialogues-only-REVISED.md  aathichudi-ep9-dialogues-only.md  aathichudi-ep9-moral-standards-REVISED.md  aathichudi-ep9-moral-standards-steps-1-3.md  (+13 more)
.claude/: settings.local.json  validation-music-scene-sync.md
.claude/commands/: check-ingore-comments.md  create-video.md  research-generic-command.md  research-generic-documentation.md  research-topic-command.md  research-topic-documentation.md  slash-creator.md  validate.md
.claude/workflows/: youtube-video-creation-workflow.md
alembic/: env.py
alembic/versions/: e4a05b88d90b_initial.py
app/: __init__.py  main.py
app/core/: __init__.py  config.py  database.py  exceptions.py  health.py  logging.py  middleware.py
app/core/tests/: test_config.py  test_database.py  test_exceptions.py  test_health.py  test_logging.py  test_middleware.py
app/shared/: __init__.py  models.py  schemas.py  utils.py
app/shared/tests/: __init__.py  conftest.py  test_models.py  test_schemas.py  test_utils.py
app/tests/: conftest.py  test_database_integration.py  test_main.py
docs/: alignment-review-from-start.md  logging-standard.md  mvp-tool-designs(1).md  mypy-standard.md  planning-complete-ready-for-testing.md  pyright-standard.md  pytest-standard.md  ruff-standard.md  tool-architecture-design.md
examples/: kavi-peacock-complete-video-production.md
research/: AI_Music_Generation_API_Research_Report.md  AI_Video_Creation_Research_Report.md  voice-synthesis-apis-tamil-english-kids-content.md
